# midiplay

./: CMakeLists.txt  test.txt
src/app/: led.cpp  led.hpp  main.cpp
src/midi/: midi.cpp  midi.hpp
src/port/: cmdq.hpp  tsafeq.hpp
src/snd/: snd.cpp  snd.hpp
